...
            "state" : "translated",
            "value" : "¡Todas las tareas han sido completadas!"
          }
        }
      }
    },
    "Allow Notifications" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Allow Notifications"
          }
...
            "state" : "translated",
            "value" : "Enfermedad renal crónica"
          }
        }
      }
    },
    "Close" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cerrar"
          }
...
            "state" : "translated",
            "value" : "Colorado"
          }
        }
      }
    },
    "Coming Soon" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Coming Soon"
          }
...
    },
    "COMPREHENSION_STEP_TITLE" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Consent Survey"
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Consent Survey"
...
            "state" : "translated",
            "value" : "Versión de Consentimiento"
          }
        }
      }
    },
    "Continue" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continue"
          }
...
            "state" : "translated",
            "value" : "Racha actual"
          }
        }
      }
    },
    "Cycling" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cycling"
          }
...
            "state" : "translated",
            "value" : "Salud"
          }
        }
      }
    },
    "Health Records" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Health Records"
          }
...
            "state" : "translated",
            "value" : "Puede elegir compartir ciertos registros de salud desde la app Salud de Apple, como resultados de laboratorio, medicamentos o inmunizaciones. Esta información se utilizará con fines de investigación para comprender mejor la salud del corazón. Compartir es voluntario y puede revocarse en cualquier momento."
          }
        }
      }
    },
    "HealthKit Access" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HealthKit Access"
          }
...
            "state" : "translated",
            "value" : "¿Latino / Hispano?"
          }
        }
      }
    },
    "Learn More" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Learn More"
          }
...
            "state" : "translated",
            "value" : "Noticias"
          }
        }
      }
    },
    "Next" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Next"
          }
...
            "state" : "translated",
            "value" : "Exposición a la Nicotina"
          }
        }
      }
    },
    "No" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "No"
          }
...
            "state" : "translated",
            "value" : "Hora preferida para las notificaciones de actividad. Puede cambiarla más tarde."
          }
        }
      }
    },
    "Notifications" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Notifications"
          }
...
            "state" : "translated",
            "value" : "Ohio"
          }
        }
      }
    },
    "OK" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
...
    },
    "ONBOARDING_DISCLAIMER_1_TITLE" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Study Overview & Participation"
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Study Overview & Participation"
...
            "state" : "translated",
            "value" : "Región"
          }
        }
      }
    },
    "Region Not Yet Supported" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Region Not Yet Supported"
          }
...
            "state" : "translated",
            "value" : "Revisar Formularios de Consentimiento"
          }
        }
      }
    },
    "Review Permissions" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Review Permissions"
          }
...
            "state" : "translated",
            "value" : "Desde hace varios años he realizado de forma rutinaria actividad física planificada por motivos de salud, deporte o fitness con regularidad (al menos 3 veces por semana, 30 minutos por día); es parte de mi estilo de vida."
          }
        }
      }
    },
    "Start" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start"
          }
...
            "state" : "translated",
            "value" : "Hoy"
          }
        }
      }
    },
    "Today's Tasks" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Today's Tasks"
          }
...
            "state" : "translated",
            "value" : "Accidente isquémico transitorio (AIT)"
          }
        }
      }
    },
    "True" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "True"
          }
...
            "state" : "translated",
            "value" : "Peso"
          }
        }
      }
    },
    "Welcome to My Heart Counts" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Welcome to My Heart Counts"
          }
...
            "state" : "translated",
            "value" : "Virginia Occidental"
          }
        }
      }
    },
    "What country do you currently live in?" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "What country do you currently live in?"
          }
...
            "state" : "translated",
            "value" : "Aniversario de madera"
          }
        }
      }
    },
    "Workout Preference" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Workout Preference"
          }
...
            "state" : "translated",
            "value" : "Wyoming"
          }
        }
      }
    },
    "Yes" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Yes"
          }
...
            "state" : "translated",
            "value" : "Sus %1$@ pasos recorren aproximadamente %2$@."
          }
        }
      }
    },
    "Your Account" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Your Account"
          }
...
